fixed button text issue on smaller screens

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -90,3 +90,13 @@ li {
 textarea {
     margin-bottom: 5px;
 }
+
+@media screen and (max-width: 980px) {
+    .devour {
+        width: 40%;
+    }
+
+    .delete {
+        width: 40%;
+    }
+}
